<package>
  <name>my_turtlebot3_description</name>
  <version>0.0.0</version>
  <description>my_turtlebot3_description</description>
  <maintainer email="ar@todo.todo"></maintainer>

  <license>BSD</license>

  <url type="website">None</url>
  <!-- <url type="bugtracker"></url> -->

  <author></author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rviz</test_depend> -->

</package>
